--- a/Aplikacija/Frontend/lab_zakazivanje/src/App.css
+++ b/Aplikacija/Frontend/lab_zakazivanje/src/App.css
@@ -1,4 +1,5 @@
-.oglasnaTabla {
+.oglasnaTabla 
+{
     background: linear-gradient(270deg, #f7e8a9, #c8e7f7, #f7c8c8);
     background-size: 600% 600%;
     animation: gradientSlide 15s ease infinite;
@@ -16,13 +17,15 @@
     font-family: 'Rubik', sans-serif;
 }
 
-@keyframes gradientSlide {
+@keyframes gradientSlide 
+{
     0% { background-position: 0% 50%; }
     50% { background-position: 100% 50%; }
     100% { background-position: 0% 50%; }
 }
 
-.oglasnaTabla-header {
+.oglasnaTabla-header 
+{
     background-color: #333;
     color: white;
     height: 60px;
@@ -38,7 +41,8 @@
     font-size: 1.2rem;
 }
 
-.oglasnaTabla-header::before {
+.oglasnaTabla-header::before 
+{
     content: '';
     position: absolute;
     top: 20px;
@@ -51,8 +55,9 @@
     border: 2px solid #666;
 }
 
-.oglasnaTabla-paper {
-    background-color: rgba(255,255,255,0.9); /* poluprovidna da se vidi gradient pozadine */
+.oglasnaTabla-paper 
+{
+    background-color: rgba(255,255,255,0.9);
     flex: 1;
     padding: 20px;
     border-radius: 6px;
@@ -234,4 +239,61 @@ h4
     border-color: dodgerblue;
     box-shadow: 0 0 5px rgba(30,144,255,0.3);
     outline: none;
+}
+
+.dodajAktDiv
+{
+    margin-top: 15px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.dodajAktDiv button
+{
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    width: 40px;
+    height: 40px;
+    color: black;
+    font-size: large;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.dodajAktDiv button:hover
+{
+    background-color: dodgerblue;
+    color: white;
+    transition: all 0.2s ease;
+    cursor: pointer;
+}
+
+.formaWrapper
+{
+
+}
+
+.formaDiv
+{
+    display: flex;
+    gap: 10px;
+}
+
+.formaLeft
+{
+    width: 40%;
+    border-right: 2px dashed black;
+    padding: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 20px;
+    align-items: center;
+}
+
+.radioButtons
+{
+    padding-left: 10px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
 }
