--- a/Aplikacija/Frontend/lab_zakazivanje/src/App.css
+++ b/Aplikacija/Frontend/lab_zakazivanje/src/App.css
@@ -284,7 +284,7 @@ h4
 {
     width: 40%;
     border-right: 2px dashed black;
-    padding: 30px;
+    padding: 20px 30px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 20px;
@@ -296,4 +296,85 @@ h4
     padding-left: 10px;
     display: grid;
     grid-template-columns: repeat(2,1fr);
+}
+
+.radioButtons div
+{
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+.radioButtons div input
+{
+    margin:0
+}
+
+.css-b62m3t-container
+{
+    border: none !important;
+    border-radius: 8px !important;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+
+ .css-13cymwt-control
+ {
+    border-radius: 8px !important;
+    border: none;
+ }
+
+  .css-13cymwt-control:hover
+ {
+    background-color: aliceblue;
+    cursor: pointer;
+    border-color: dodgerblue;
+    box-shadow: 0 0 5px rgba(30,144,255,0.3);
+    outline: none;
+ }
+
+ .search-box:disabled
+ {
+    background-color: #ddd;
+ }
+
+  .search-box:disabled:hover
+ {
+    border: 1px solid transparent;
+    cursor: default;
+ }
+
+ .btnForm
+ {
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    color: black;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    justify-self: center;
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 10px;
+ }
+
+ .btnForm:hover
+ {
+    background-color: dodgerblue;
+    color: white;
+    transition: all 0.2s ease;
+    cursor: pointer;
+ }
+
+ .btnForm:disabled
+ {
+    background-color: #aaa;
+ }
+
+  .btnForm:disabled:hover
+ {
+    color:black
+ }
+
+.highlight-row {
+    background-color: #ffff99 !important; /* svetlo žuta */
+    transition: background-color 3s ease; /* glatko menja boju */
 }
