--- a/Aplikacija/Frontend/lab_zakazivanje/src/App.css
+++ b/Aplikacija/Frontend/lab_zakazivanje/src/App.css
@@ -374,7 +374,56 @@ h4
     color:black
  }
 
-.highlight-row {
-    background-color: #ffff99 !important; /* svetlo žuta */
-    transition: background-color 3s ease; /* glatko menja boju */
+.highlight-row 
+{
+    background-color: #fff59d;
+    animation: fadeHighlight 5s forwards;
+}
+
+.shake-row
+{
+    animation: fadeShake 3s forwards;
+}
+
+@keyframes fadeHighlight 
+{
+    0% { background-color: #fff59d; }
+    100% { background-color: transparent; }
+}
+
+@keyframes fadeShake 
+{
+    10% { transform: translateX(-2px); } 
+    20% { transform: translateX(2px); } 
+    30% { transform: translateX(-2px); }
+    40% { transform: translateX(2px); } 
+    50% { transform: translateX(0); } 
+    100% { background-color: transparent; transform: translateX(0); }
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.tooltip::after {
+  content: attr(data-tooltip);
+  position: absolute;
+  bottom: 120%; /* iznad elementa */
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #333;
+  color: #fff;
+  padding: 4px 8px;
+  border-radius: 4px;
+  font-size: 12px;
+  white-space: nowrap;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s;
+}
+
+.tooltip:hover::after {
+  opacity: 1;
 }
