--- a/Aplikacija/Frontend/lab_zakazivanje/src/App.css
+++ b/Aplikacija/Frontend/lab_zakazivanje/src/App.css
@@ -75,6 +75,7 @@
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    flex-grow: 1;
 }
 
 th, td
@@ -82,6 +83,7 @@ th, td
     border: 1px solid white;
     text-align: center;
     padding: 5px;
+    font-size: 14px;
 }
 
 th
@@ -199,7 +201,7 @@ h4
 .aktivnostiLeft
 {
     display: flex;
-    gap:20px;
+    gap: 10px;
     width: fit-content;
     flex-direction: column;
     width: 40%;
@@ -225,7 +227,7 @@ h4
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     background-color: #fdfdfd;
-    font-size: 14px;
+    font-size: small;
     transition: border 0.2s, box-shadow 0.2s;
 }
 
@@ -280,9 +282,13 @@ h4
     gap: 10px;
 }
 
-.formaLeft
+.formaLeftDiv
 {
     width: 40%;
+}
+
+.formaLeft
+{
     border-right: 2px dashed black;
     padding: 20px 30px;
     display: grid;
@@ -341,6 +347,12 @@ h4
  {
     border: 1px solid transparent;
     cursor: default;
+ }
+
+ .dugmiciDiv
+ {
+    display: flex;
+    justify-content: space-evenly;
  }
 
  .btnForm
@@ -428,15 +440,42 @@ h4
   opacity: 1;
 }
 
-.btnEdit
+.btnEdit, .btnPromote
 {
-    background-color: white;
-    font-size: large;
+    background-color: transparent;
+    font-size: 1.2rem;
     border: none;
 }
 
-.btnEdit:hover
+.btnEdit:hover, .btnPromote:hover
 {
     color: dodgerblue;
     cursor: pointer;
+}
+
+.btnPromote
+{
+    font-size: 1.5rem;
+}
+
+.btnActive
+{
+    color: #b9d8c0;
+}
+
+.btnPlanned
+{
+    color: #f5e09b;
+}
+
+.btnNext
+{
+    color: #9dd3da;
+}
+
+.trAkt
+{
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
