--- a/Aplikacija/Frontend/lab_zakazivanje/src/App.css
+++ b/Aplikacija/Frontend/lab_zakazivanje/src/App.css
@@ -55,7 +55,7 @@
     border: 2px solid #666;
 }
 
-.oglasnaTabla-paper 
+.oglasnaTabla-paper, .oglasnaTabla-paper2
 {
     background-color: rgba(255,255,255,0.9);
     flex: 1;
@@ -607,8 +607,8 @@ h4
     align-items: center;
 }
 
-/* kružić */
-.seat-checkbox {
+.seat-checkbox 
+{
     width: 18px;
     height: 18px;
     border: 2px solid #555;
@@ -647,4 +647,107 @@ h4
     justify-content: space-between;
     width: 100%;
     height: 40px;
+}
+
+.messageDiv
+{
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.messageDiv img
+{
+    width: 60%;
+    height: 80%;
+}
+
+.nijeTrSlika
+{
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    padding: 10px;
+}
+
+.nijeTrSlika p 
+{
+    margin: 0;
+}
+
+.nijeTrSlika img {
+    max-width: 25%;
+    height: auto;
+    display: block;
+}
+
+.slikaDiv
+{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.oglasnaTabla-paper2 {
+    display: flex;
+    justify-content: center;        
+    height: 80vh;           
+    background-color: rgba(255,255,255,0.9);
+    padding: 20px;
+    border-radius: 6px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    border: 1px solid #ddd;
+    overflow-y: auto;
+    line-height: 1.6;
+    color: #333;
+}
+
+.loginPage 
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
+    width: fit-content;
+}
+
+
+.loginPage h1 
+{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.loginDiv 
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    width: 50%;
+    height: 80%;
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    padding: 20px;
+}
+
+.loginDiv img 
+{
+    max-width: 400px;
+    height: auto;
+    display: block;
+    margin-bottom: 15px;
+}
+
+.loginDiv button 
+{
+    width: 80%;
 }
